# vv

./: .gitignore  CMakeLists.txt  README.md  SaveManager.cpp  SaveManager.h  archdef.h  main.cpp  main.h  saveManager.cpp  saveManager.h  win32.cpp  win32.h
palette/: image.cpp  image.h  palette.cpp  palette.h
